# vsixHarvester

./: Cargo.toml  README.ja.md  README.md
src/: cli.rs  directory.rs  download.rs  extension.rs  info.rs  json.rs  main.rs  version.rs
src/extensions/: extension.rs  file.rs  info.rs  mod.rs  parse.rs  platform.rs  url.rs  version.rs
test/: test.ps1
