[package]
name = "extHarvester"
version = "0.1.4"
edition = "2021"
authors = ["bamboogeneral@shortarrow.jp"]
description = "A CLI tool to download VSCode extensions from extensions.json"
license = "MIT"
repository = "https://github.com/ShortArrow/extHarvester"
homepage = "https://github.com/ShortArrow/extHarvester"
documentation = "https://github.com/ShortArrow/extHarvester"
readme = "README.md"


[dependencies]

